--- a/src/by/it/psmishenko/project/webapp/css/sticky-footer-navbar.css
+++ b/src/by/it/psmishenko/project/webapp/css/sticky-footer-navbar.css
@@ -5,14 +5,17 @@ html {
   min-height: 100%;
 }
 body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
 }
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  background-color: #f8f8f8;
-  border-color:#e7e7e7;
+  height: 100px;
+  background-color: #f5f5f5;
+  margin-top: 10px;  
 }
 
 
@@ -20,15 +23,9 @@ body {
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
 
+.container {
+  padding: 0 15px;
+}
 .container .text-muted {
   margin: 20px 0;
-}
-
-.footer > .container {
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
-code {
-  font-size: 80%;
 }
